# python-refresher-2026

./: .gitignore  README.md  main.py  pyproject.toml  python_refresher.md
notebooks/: basics.html  basics.qmd  pandas.html  pandas.qmd  pandas.quarto_ipynb  plotly.html  plotly.qmd
src/: basics.py  pandas_examples.py  plotly.py  test_pydantic.py
